2002-05-07  Lennart Staflin  <lenst@lysator.liu.se>

	* Version 1.3.0 released

	* psgml-maint.el (psgml-common-files): add psgml-sysdep
	(psgml-find-source-dir): fix version

2002-04-26  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml.el (sgml-mode): make adding to
	text-property-default-nonsticky conditional on
	sgml-default-nonsticky to work with Emacs < 21.
	
2002-04-25  Lennart Staflin  <lenst@lysator.liu.se>

	fixing merge of Dave Loves patch.
	
2002-02-08  Dave Love  <fx@gnu.org>
	[Merging from 1.2.4 branch /lenst]
	
	Changes for various things: Useful DTD-less XML editing; avoiding
	CL at runtime; some Emacs portability; Mule-related fixes,
	particularly for non-ASCII names in DTD.

	* psgml-maint.el (psgml-find-source-dir): Fix version number.

	* psgml-info.el (sgml-set-difference, sgml-union): New functions.
	(sgml-eltype-refrenced-elements): Use them and also use
	add-to-list instead of pushnew.

	* psgml-dtd.el: Doc and message fixes.
	(sgml-write-dtd): Use sgml-set-buffer-multibyte and bind
	coding-system-for-write around write-region.
	(sgml-merge-attlists): Use copy-sequence, not copy-list.

	* psgml-edit.el: Require cl when compiling.  Don't set
	byte-compile-warnings.
	(sgml-quote-attribute-value, sgml-tag-regexp)
	(sgml-edit-attrib-next): Use documented way of including `-' in
	regexp range.
	(sgml-change-start-tag, sgml-insert-attribute)
	(sgml-make-attrib-menu, sgml-menu-ask): Fix to work without a DTD.
	(sgml-edit-attrib-next, sgml-tag-regexp): Maybe allow non-ASCII.
	(sgml--all-possible-elements): Kludge for DTD-less case.
	(sgml-make-character-reference): Take care over multibyteness.
	Maybe deal with unicodes.
	(sgml-edit-attrib-specification-list, sgml-edit-attrib-default)
	(sgml-edit-attrib-default, sgml-edit-attrib-clear)
	(sgml-edit-attrib-field-start, sgml-attribute-buffer): Use
	property name `sgml-category', not `category', which is special in
	Emacs. [backed out //lenst]
	(sgml-operate-on-tags): Use sgml-restore-buffer-modified-p.