@@ -1,3 +1,3 @@
 
-rsync -essh psgml-1.2.5.tar.gz lyscvs:
-#scp -v psgml-1.2.5.tar.gz lenst@sandra.lysator.liu.se:
+#rsync -essh psgml-1.3.0.tar.gz lyscvs:
+scp psgml-1.3.0.tar.gz lyscvs:
